# neng-log

./: .gitignore  CMakeLists.txt  README.md  neng-log.map  neng-log.pc.in  neng-log.properties
cmake/: general.cmake  install.cmake  neng-strip.sh  pkgcfg.cmake
debian/: changelog  control  libneng-log-dev.dirs  libneng-log-dev.install  libneng-log.dirs  libneng-log.install  rules
include/neng/log/: log.h  log_file.h  log_properties.h  log_syslog.h  log_version.h.in
src/neng/log/: log_appender.c  log_appender.h  log_core.c  log_def.h  log_file.c  log_file_properties.c  log_file_properties.h  log_filter.c  log_filter.h  log_item.c  log_item.h  log_match.c  log_misc.c  log_misc.h  log_properties.c  log_properties_misc.c  log_properties_misc.h  log_syslog.c  log_syslog_properties.c  log_syslog_properties.h  properties.c  properties.h  sysfunc.c  sysfunc.h
test/: main.c
test/example/: main.c
test/example-properties/: main.c
